--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Property in chandigarh</title>
+   <title>Property in chandigarh | mohali</title>
   <meta name="description" content="Prime Chandigarh Mohali Properties: Luxury Living at Affordable Prices - Explore Now! Premium properties available at competitive prices in the prime location of Mohali Chandigarh Panchkula">
   <meta name="keywords" content="property in chandigarh, know your property in chandigarh, sale property in chandigarh, sale of property in chandigarh, property in mohali, property in mohali for sale, real estate in chandigarh, properties in chandigarh, properties in chandigarh for sale, properties in mohali, real estate agents in chandigarh, real estate agents in mohali">
   <meta name="author" content="Ajitesh Singh">
