--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -3,18 +3,18 @@
 <head>
    <title>Property in chandigarh | mohali</title>
   <meta name="description" content="Prime Chandigarh Mohali Properties: Luxury Living at Affordable Prices - Explore Now! Premium properties available at competitive prices in the prime location of Mohali Chandigarh Panchkula">
-  <meta name="keywords" content="property in chandigarh, know your property in chandigarh, sale property in chandigarh, sale of property in chandigarh, property in mohali, property in mohali for sale, real estate in chandigarh, properties in chandigarh, properties in chandigarh for sale, properties in mohali, real estate agents in chandigarh, real estate agents in mohali, Jeet Estates, https://propertyinchandigarh.onrender.com">
-  <meta name="author" content="Jeet Estates">
+  <meta name="keywords" content="property in chandigarh, know your property in chandigarh, sale property in chandigarh, sale of property in chandigarh, property in mohali, property in mohali for sale, real estate in chandigarh, properties in chandigarh, properties in chandigarh for sale, properties in mohali, real estate agents in chandigarh, real estate agents in mohali, TRI CITY Homes">
+  <meta name="author" content="TRI CITY Homes">
   <link rel="stylesheet" type="text/css" href="css/about.css">
 </head>
 <body>
   <div class="about-container">
     <h1>About Jeet Estates</h1>
-    <p>Welcome to Jeet Estates established in March 2015, your premier destination for real estate in Mohali, Chandigarh, and Panchkula. We specialize in providing top-notch properties and the best deals in these cities. Whether you are looking for houses for sale, independent houses, apartments, villas, or flats for rent, we have a wide range of options to suit your needs.</p>
+    <p>Welcome to TRI CITY Homes established in March 2015, your premier destination for real estate in Mohali, Chandigarh, and Panchkula. We specialize in providing top-notch properties and the best deals in these cities. Whether you are looking for houses for sale, independent houses, apartments, villas, or flats for rent, we have a wide range of options to suit your needs.</p>
     <p>Our extensive listings include properties for rent in Chandigarh, Panchkula, and Mohali, ranging from flats and apartments to independent houses and villas. If you're in search of a room on rent or a fully furnished flat in Chandigarh or Panchkula, we can assist you in finding the perfect accommodation that meets your preferences.</p>
     <p>Additionally, we offer services for buying properties in Chandigarh, Panchkula, and Mohali, whether it's a house for sale, land for sale, or a farm house. Our team of property dealers and real estate developers in these cities is dedicated to helping you navigate the market and make informed decisions.</p>
-    <p>At Jeet Estates, we understand the importance of finding the right property at the right price. That's why we provide comprehensive information about property prices in Chandigarh, Panchkula, and nearby areas. Whether you're a family looking for a suitable rental property or an individual seeking to buy a home, we are here to assist you every step of the way.</p>
-    <p>Experience the convenience and professionalism of Jeet Estates for all your real estate needs in Mohali, Chandigarh, and Panchkula. With our expertise and commitment to customer satisfaction, we strive to make your property search and transaction a seamless and enjoyable experience. Contact us today to explore the wide range of properties available and find your perfect home or rental accommodation in Chandigarh, Panchkula, and Mohali.</p>
+    <p>At TRI CITY Homes, we understand the importance of finding the right property at the right price. That's why we provide comprehensive information about property prices in Chandigarh, Panchkula, and nearby areas. Whether you're a family looking for a suitable rental property or an individual seeking to buy a home, we are here to assist you every step of the way.</p>
+    <p>Experience the convenience and professionalism of TRI CITY Homes for all your real estate needs in Mohali, Chandigarh, and Panchkula. With our expertise and commitment to customer satisfaction, we strive to make your property search and transaction a seamless and enjoyable experience. Contact us today to explore the wide range of properties available and find your perfect home or rental accommodation in Chandigarh, Panchkula, and Mohali.</p>
   </div>
 </body>
 </html>
